Add margin auto to content in mobile
Add auto margin in mobile to content

--- a/static/styles.css
+++ b/static/styles.css
@@ -134,6 +134,7 @@ h5{
     .content{
         margin-top: 0;
         flex-direction: row;
+        margin: auto;
     }
     .about{
         margin-left: 0;
