--- a/static/styles.css
+++ b/static/styles.css
@@ -97,10 +97,10 @@ h5{
     max-width: 800px;
     text-align: justify;
 }
-
-@media screen and (max-width: 415px){
+/*Mobile responsive*/
+@media screen and (max-width: 639px){
     html{
-        max-width: 315px;
+        max-width: 100%;
         padding-left: 5px;
         padding-right: 5px;
     }
@@ -127,6 +127,59 @@ h5{
         display: flex;
         flex-direction: row;
         justify-content: center;
+    }
+    .navbar li {
+        padding: 10px;
+    }
+    .content{
+        margin-top: 0;
+        flex-direction: row;
+        margin: auto;
+    }
+    .about{
+        margin-left: 0;
+    }
+}
+
+/*Tablet responsive*/
+@media screen and (min-width: 639px) and (max-width: 1023px){
+    html{
+        max-width: 100%;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .logo{
+        margin-top: 10px;
+    }
+    .header-wrapper{
+        width: 80vw;
+        display: flex;
+        flex-direction: row;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .navbar{
+        background: var(--color3);
+        margin-top: 0;
+        display: block;
+        width: 100%;
+        height: 65px;
+        border-radius: 15px;
+        align-items: center;
+        z-index: 0;
+        position: relative;
+        align-items: center;
+        border: solid 1px transparent;
+    }
+    .navbar ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-left: 50px;
+        padding-right: 50px;
+        
     }
     .navbar li {
         padding: 10px;
